# nukleus

./: .drone.yml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  index.md  input.nk  input2.nk  test.nk  test.nkl  test2.nk
.github/workflows/: pre-release.yml  rust-clippy.yml
ast/: Cargo.toml
ast/src/: ast.rs
benches/: lexer.rs
lexer/: Cargo.toml
lexer/src/: lex.rs  lib.rs
lexer/src/lex/: mod.rs
lexer/src/lex_new/: errors.rs  identifier.rs  mod.rs  symbol.rs  value.rs
lexer/src/tokens/: mod.rs  operators.rs  statements.rs  symbols.rs  types.rs
lexer/src/tokens_new/: mod.rs  statements.rs  symbols.rs  types.rs
nk-ast/: Cargo.toml
nk-astgen/: Cargo.toml
nk-astgen/src/: lib.rs
nk-astgen/src/ast/: logic.rs  mod.rs  statement.rs  types.rs
nk-astgen/src/parser/: error.rs  mod.rs
nk-astgen/src/parser_new/: error.rs  mod.rs
nk-codegen/: Cargo.toml
nk-codegen/src/: context.rs  cranelift_JIT.rs  cranelift_jit.rs  error.rs  lib.rs
nk-codegen/src/asm_nukleus/: asm_nukleus.rs  mod.rs  types.rs
nk-codegen/src/asm_nukleus/arm/: mod.rs
nk-codegen/src/asm_nukleus/x86/: mod.rs
nk-lexer/: Cargo.toml
nk-lexer/src/: error.rs  errors.rs  lex.rs  lib.rs
nk-lexer/src/lex_new/: errors.rs  identifier.rs  mod.rs  symbol.rs  value.rs
nk-lexer/src/lex_new_new/: errors.rs  identifier.rs  mod.rs  symbol.rs  value.rs
nk-lexer/src/neo_tokens/: operators.rs  statements.rs  symbols.rs  types.rs
nk-lexer/src/tokens/: mod.rs  operators.rs
nk-lexer/src/tokens_new/: mod.rs  operators.rs  statements.rs  symbols.rs  types.rs
nk-lexer/src/trie_lex/: errors.rs  identifier.rs  mod.rs  symbol.rs  trie.rs  value.rs
nk-lexer/src/trie_tokens/: types.rs
nkc/: Cargo.toml
parser/: Cargo.toml
sample/: check_prime_number.nk  factorial.nk  fibonacci.nk  function_adder.nk  hello_world.nk  helloworld.nk  prime.nk  test.nkl  triangle.nk
sample/import_statement/: fibonacci.nk  import.nk  main.nk
src/: cordium.pest  errors.rs  lib.rs  main.rs  main.rs_disabled  nukleus-test.pest  nukleus.pest  test.rs
src/compiler/: compile.rs  interpreter.rs  jit_inkwell.rs  mod.rs
src/core/: ast.rs  ast_old.rs  mod.rs  parser.rs  parser_old.rs
src/core/ast/: ast.rs  errors.rs  mod.rs
src/core/ast_temp/: ast.rs  ast_expression.rs  ast_statement.rs  errors.rs  mod.rs
src/core/lexer/: lex.rs  mod.rs  token.rs
src/core/lexer/tokens/: mod.rs  operators.rs  statement.rs  symbols.rs  types.rs
src/core/parser/: apparatus.rs  class.rs  expression.rs  function.rs  import.rs  mod.rs  parse.rs  statement.rs  string.rs
src/core/parser_new/: mod.rs  parse.rs
src/cores/: mod.rs
src/cores/ast/: ast.rs  errors.rs  statement.rs
src/cores/parser/: parse.rs
src/interpreter/: errors.rs  interpret.rs  mod.rs
src/sample/: test.nkl
