[package]
name = "nukleus"
author = "Skuld Norniern"
version = "0.1.0"
repository = "https://github.com/Nukleus-Language/nukleus"
description = "New AI, GUI, Cross-Platform Programming language"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
cranelift = "0.93.0"
cranelift-codegen = "0.93.0"
cranelift-module = "0.93.0"
cranelift-jit = "0.93.0"
cranelift-native = "0.93.0"
cranelift-frontend = "0.93.0"
snafu = "0.7.4"
clap = "4.2.0"

lexer = { path = "./lexer" }
parser = { path = "./parser" }

#[lib]
#crate-type = ["cdylib", "rlib"]
#[env]
#NK_VERSION = "0.1.0 Nightly"

[workspace]
members = [
	"lexer",
	"parser"
]

