[package]
name = "nukleus"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/Nukleus-Language/nukleus"
description = "New AI, GUI, Cross-Platform Programming language"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
#cranelift = "0.93.0"
#cranelift-codegen = "0.93.0"
#cranelift-module = "0.93.0"
#cranelift-jit = "0.93.0"
#cranelift-native = "0.93.0"
#cranelift-frontend = "0.93.0"
snafu = "0.7.4"
clap = "4.2.0"

lexer = { path = "./nk-lexer" }
astgen = { path = "./nk-astgen" }
codegen = { path = "./nk-codegen" }
inksac = "0.1.3"
cranelift-codegen = "0.100.0"

[dev-dependencies]
divan = "0.1.0"

[[bench]]
name = "lexer"
harness = false

#[lib]
#crate-type = ["cdylib", "rlib"]
#[env]
#NK_VERSION = "0.1.0 Nightly"

[workspace]
members = [
	"nk-lexer",
	"nk-astgen",
	"nk-codegen"
]

