[package]
name = "nukleus"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/Nukleus-Language/nukleus"
description = "New AI, GUI, Cross-Platform Programming language"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }

snafu = "0.7.4"
clap = "4.2.0"

lexer = { path = "./nk-lexer", package="nk-lexer"}
astgen = { path = "./nk-astgen" }
codegen = { path = "./nk-codegen" }
inksac = "0.4.0"
# cranelift-codegen = "0.100.0"

[dev-dependencies]
divan = "0.1.0"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "astgen"
harness = false

[workspace]
members = [
	"nk-lexer",
	"nk-astgen",
	"nk-codegen"
]

[profile.release]
lto = true
pgo = true