[package]
name = "astgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
inksac = "0.4.0"
lexer = { path = "../nk-lexer", package="nk-lexer"}
log = "0.4.20"

[profile.release]
lto = true
pgo = true