[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inksac = "0.4.0"
lexer = { path = "../nk-lexer", package="nk-lexer"}
astgen = { path = "../nk-astgen" }
cranelift = "0.114.0"
cranelift-module = "0.114.0"
cranelift-jit = "0.114.0"
cranelift-native = "0.114.0"
cranelift-codegen = "0.114.0"


[lints.clippy]
unwrap_used = "deny"
cognitive_complexity = "deny"

[profile.release]
lto = true
pgo = true