[package]
name = "nk-lexer"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inksac = "0.4.0"

[lints.clippy]
unwrap_used = "deny"
cognitive_complexity = "deny"

[profile.release]
lto = true
pgo = true